--- a/Amethyst/Amethyst.csproj
+++ b/Amethyst/Amethyst.csproj
@@ -2,13 +2,15 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net10.0</TargetFramework>
+        
         <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
+        <Nullable>disable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Parser\Parser.csproj" />
+      <PackageReference Include="AsmResolver" Version="6.0.0-beta.3" />
+      <PackageReference Include="AsmResolver.DotNet" Version="6.0.0-beta.3" />
     </ItemGroup>
 
 </Project>
