--- a/Amethyst/Amethyst.csproj
+++ b/Amethyst/Amethyst.csproj
@@ -13,4 +13,8 @@
       <PackageReference Include="AsmResolver.DotNet" Version="6.0.0-beta.3" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="CreditedCode\" />
+    </ItemGroup>
+
 </Project>
