Made a simple for loop, nothing realy else lol

--- a/Amethyst/Amethyst.csproj
+++ b/Amethyst/Amethyst.csproj
@@ -17,4 +17,9 @@
       <Content Include="bin\Debug\net10.0\AssemblyShard.dll" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Compile Remove="hello_world.shard.cs" />
+      <None Include="hello_world.shard.cs" />
+    </ItemGroup>
+
 </Project>
