Save before deleting stuff

--- a/ILPreview/ILPreview.csproj
+++ b/ILPreview/ILPreview.csproj
@@ -5,6 +5,10 @@
         <LangVersion>latest</LangVersion>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <OutputType>Exe</OutputType>
     </PropertyGroup>
+
+ 
+
 
 </Project>
