--- a/Amethyst-Tests/Amethyst-Tests.csproj
+++ b/Amethyst-Tests/Amethyst-Tests.csproj
@@ -9,8 +9,22 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\AmethystLexer\AmethystLexer.csproj" />
-      <ProjectReference Include="..\RuleLexer\RuleLexer.csproj" />
+        <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="4.14.0">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.14.0" />
+        <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.14.0" />
     </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\PLSGen\PLSGen.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="true" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <AdditionalFiles Include="example.plsg" />
+    </ItemGroup>
+
+
 
 </Project>
