Basically the lex lib is working now

--- a/Amethyst-Tests/Amethyst-Tests.csproj
+++ b/Amethyst-Tests/Amethyst-Tests.csproj
@@ -25,6 +25,11 @@
       <AdditionalFiles Include="example.plsg" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Compile Remove="LexRules.cs" />
+      <None Include="LexRules.cs" />
+    </ItemGroup>
+
 
 
 </Project>
