--- a/SequentialParser/SequentialParser.csproj
+++ b/SequentialParser/SequentialParser.csproj
@@ -2,13 +2,8 @@
 
     <PropertyGroup>
         <TargetFramework>net10.0</TargetFramework>
-        <LangVersion>latest</LangVersion>
         <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
-        <OutputType>Exe</OutputType>
+        <Nullable>disable</Nullable>
     </PropertyGroup>
-
- 
-
 
 </Project>
